--- a/css/main.css
+++ b/css/main.css
@@ -2,21 +2,19 @@
 html {
 	font-size: 16px;
 }
+
 body {
 	font-family: 'Montserrat', Helvetica, Arial, sans-serif;
 	font-size: .9em;
 	color: #000000;
 }
 
-/* The width property has been changed to max-width */
 .content-wrapper {
 	width: 90%;
 	max-width: 1200px;
 	display: flex;
 	justify-content: center;
 	flex-flow: row wrap;
-	/* margin: 0 auto; */
-	/* overflow: auto; */
 }
 
 h1,
@@ -49,17 +47,13 @@ p {
 }
 
 /******** HEADER STYLES ********/
-/* The widths are in a percentage! */
 header {
-	/* height: 110px; */
-	/* margin: 0 auto; */
 	display: flex;
 	justify-content: center;
 	text-align: center;
 }
 
 header h1 {
-	/* float: left; */
 	width: 100%;
 	border-bottom: 3px solid #77a466;
 	padding: 38px 0px 20px 0px;
@@ -71,8 +65,6 @@ header h1 span {
 }
 
 header nav {
-	/* float: right; */
-	/* padding: 46px 0; */
 	padding: 20px 0px;
 }
 
@@ -83,7 +75,6 @@ header nav ul {
 }
 
 header nav ul li {
-	/* display: inline-block; */
 	width: 100%;
 	font-size: .875rem;
 	font-weight: 700;
@@ -97,14 +88,13 @@ header nav ul li a {
 }
 
 /********  MAIN STYLES ********/
+
 /******** TOP SECTION ********/
-/* The widths are in a percentage! */
 .main-image img {
 	width: 100%;
 	border-top: 3px solid #77A466;
 	border-bottom: 3px solid #77a466;
 }
-
 
 .main-title h2 {
 	color: #45610E;
@@ -123,30 +113,17 @@ header nav ul li a {
 	border-bottom: 5px solid #EEE;
 }
 
-.section-one,
-.section-two,
-.section-three {
-	/* box-sizing: border-box; */
-	/* float: left; */
-	/* padding: 0 40px; */
-}
-
 .section-one {
-	/* width: 29%; */
 	width: 100%;
 }
 
 .section-two {
-	/* width: 42%; */
 	width: 100%;
-	/* border-left: 5px solid #EEE; */
-	/* border-right: 5px solid #EEE; */
 	border-top: 5px solid #EEE;
 	border-bottom: 5px solid #EEE;
 }
 
 .section-three {
-	/* width: 29%; */
 	width: 100%;
 }
 
@@ -166,7 +143,6 @@ header nav ul li a {
 }
 
 /******** FOOTER STYLES ********/
-/* The widths are in a percentage! */
 footer {
 	display: flex;
 	justify-content: center;
@@ -179,4 +155,57 @@ footer span {
 	text-transform: lowercase;
 	color: #45610E;
 	font-size: .875rem;
+}
+
+/******* tablet styles *******/
+
+@media (min-width: 768px){
+	.bottom-section .content-wrapper{
+		justify-content: space-evenly;
+	}
+	.section-one {
+		width: 26%;
+		box-sizing: border-box;
+	}
+	.section-two {
+		width: 40%;
+		border-left: 5px solid #EEE;
+		border-right: 5px solid #EEE;
+		border-top: 0px;
+		border-bottom: 0px;
+		padding-left: 30px;
+		padding-right: 30px;
+		box-sizing: border-box;
+	}
+	.section-three {
+		width: 26%;
+		box-sizing: border-box;
+	}
+}
+
+/******* desktop styles *******/
+
+@media (min-width: 1200px){
+	body{
+		font-size: 1em;
+	}
+	header .content-wrapper{
+		justify-content: space-between;
+		align-items: center;
+		padding: 20px 0px;
+	}
+	header h1 {
+		width: 25%;
+		border-bottom: 0px;
+		padding: 0px;
+		margin: 0px;
+		text-align: left;
+	}
+	header nav {
+		width: 21%;
+	}
+	header nav ul {
+		display: flex;
+		justify-content: space-between;
+	}
 }
